# logistics-intelligence-pipeline

./: .coverage  .env.example  .gitignore  CLAUDE.md  DEMO_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
dags/: logistics_pipeline.py
docker/: Dockerfile.airflow  init-db.sql
src/extract/: extract_diesel.py  extract_orders.py  extract_weather.py
src/load/: db.py  loader.py  tables.py
src/models/: __init__.py  _base.py  _validators.py  delivery_risk_score.py  diesel_price.py  order.py  weather_snapshot.py
src/transform/: gold_delivery_risk.py  risk_score.py  silver_diesel.py  silver_orders.py  silver_weather.py
tests/dags/: test_logistics_pipeline.py
tests/extract/: test_extract_diesel.py  test_extract_orders.py  test_extract_weather.py
tests/load/: test_db.py  test_loader.py  test_tables.py
tests/models/: test_delivery_risk_score.py  test_diesel_price.py  test_order.py  test_validators.py  test_weather_snapshot.py
tests/transform/: test_gold_delivery_risk.py  test_risk_score.py  test_silver_diesel.py  test_silver_orders.py  test_silver_weather.py
