[project]
name = "logistics-intelligence-pipeline"
version = "0.1.0"
description = "Production-grade ETL pipeline merging Olist orders with EIA diesel and OpenWeather data to score delivery risk."
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "requests>=2.32.3",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
